# worldbuildthing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
server/: CMakeLists.txt  asset_pack_manager.cpp  asset_pack_manager.h  ctx.cpp  ctx.h  globals.cpp  globals.h  main.cpp
server/web/routes/: route_assetpack.cpp  route_assetpack.h  route_assetpack_texture.cpp
shared/: CMakeLists.txt  assets.qrc
shared/assets/: cobblestone.tres  concrete.tres  default.tres  fabric.tres  grass.tres  marble.tres  metal_sheet.tres  planks.tres  plaster_damaged.tres
shared/core/: account.cpp  account.h
shared/lib/: bencodeparser.cpp  bencodeparser.h  config.cpp  config.h  globals.cpp  globals.h  logger.h  materialpropertiestemplate.cpp  materialpropertiestemplate.h  seaquel.cpp  seaquel.h  zlib_compressor.cpp
shared/lib/network/: httpclient.cpp  httpclient.h  wsclient.cpp  wsclient.h
shared/models/: asset_pack.cpp  asset_pack.h  texture.cpp  texture.h  texture_getters_setters.h  texture_gl.h  texture_image.cpp  texture_image.h  texture_image_getters_setters.h  treeitem.cpp  treemodel.cpp  treemodel.h
src/client/: CMakeLists.txt  assets.qrc  ctx.cpp  ctx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/client/assets/icons_blender/: blender_icons.qrc
src/client/engine/: abstract_light.cpp  abstract_light.h  camera.cpp  camera.h  directional_light.cpp  directional_light.h  gameobject.cpp  gameobject.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/client/gl/: GLWidget2DGrid.cpp  GLWidget2DGrid.h  Shaders.h  frustum.h  gl_functions.cpp  gl_functions.h  gl_uniform_buffer_object.cpp  gl_uniform_buffer_object.h  glwidget_picking.cpp  texture_loader.cpp  texture_loader.h
src/client/gl2/: engine3d.cpp  engine3d.h  engine3d_extras.cpp  engine3d_shadows.cpp  material.cpp  material.h  quick3dfbo.cpp  quick3dfbo.h  texture_manager.cpp  texture_manager.h
src/client/gl2/shaders/: debug_normals.h  fullbright.h  main_frag.glsl  main_vertex.glsl  vertex_points.h
src/client/lib/: CMakeLists.txt  globals.cpp  globals.h  logger_std.cpp  logger_std.h  vmf.cpp  vmf.h
src/client/lib/qt/: theme.qrc  theme_css_watcher.h
src/client/lib/qt/theme2/: DarkBlue.qss
src/client/lib/vmfpp/: vmfpp.cpp  vmfpp.h
src/client/lib/vmfpp/detail/: StringUtils.cpp
src/client/lib/vmfpp/structs/: Node.cpp  Node.h
src/client/qml/: Main.qml  Test.qml  ViewportMenuBarTextButton.qml  default.frag  gaussianblur.frag  viewport_main.frag
src/server/: CMakeLists.txt  ctx.cpp  ctx.h  globals.cpp  globals.h  main.cpp  webserver.cpp  webserver.h
src/server/lib/stb/: stb.cpp  stb.h
src/server/lib/vtf/: vtf.cpp  vtf.h
src/server/lib/vtf/common/: image.cpp  image.hpp
src/server/plugin_automask/: CMakeLists.txt  image_auto_masker.cpp  image_auto_masker.h
src/server/web/: web_sessionstore.cpp  web_sessionstore.h  web_webserver.cpp  web_webserver.h
src/server/web/routes/: route_assetpack.cpp  route_texture.cpp  route_texture.h  route_utils.cpp  route_utils.h  routes.md
src/shared/: CMakeLists.txt
src/shared/assets/: brickwall.tres  grass_leafs.tres  painting.tres  stone.tres  tiles.tres
src/shared/core/: account.cpp  account.h
src/shared/lib/: bencodeparser.cpp  bitflags.h  config.cpp  config.h  debounce.h  file_packer.cpp  file_packer.h  globals.cpp  globals.h  imageeditor.cpp  imageeditor.h  logger.cpp  materialpropertiestemplate.cpp  materialpropertiestemplate.h  seaquel.cpp  seaquel.h  utils.cpp  utils.h  zlib_compressor.h
src/shared/lib/network/: wsclient.cpp  wsclient.h
src/shared/models/: asset_loader.cpp  asset_loader.h  asset_pack.cpp  asset_pack.h  tags.cpp  tags.h  texture.cpp  texture.h  texture_getters_setters.h  texture_image.cpp  texture_image.h  texture_image_getters_setters.h  texture_manager.cpp  texture_manager.h  texture_model.cpp  texture_model.h  texture_proxy_model.cpp  texture_proxy_model.h  treeitem.h  treemodel.cpp  treemodel.h
